vantage-diorama/tests/snapshots/event_log_snapshot@load_chunk_failed.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 62
expression: events
---
- "ViewportChanged { range: 500..600 }"
- "LoadFailed { range: 500..600, error: \"on_load_chunk rejected\" }"
