vantage-diorama/tests/snapshots/event_log_snapshot@manual_refresh.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 52
expression: events
---
- Refreshing
- DatasetChanged
