vantage-diorama/tests/snapshots/event_log_snapshot@mirror_patch_mock.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 62
expression: events
---
[]
