vantage-diorama/tests/snapshots/event_log_snapshot@mirror_sqlite.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 52
expression: events
---
[]
