vantage-diorama/tests/snapshots/event_log_snapshot@optimistic_commit.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 63
expression: events
---
- "WritePending { id: \"a\", kind: Patch }"
- "RecordChanged { id: \"a\" }"
