vantage-diorama/tests/snapshots/event_log_snapshot@optimistic_rollback.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
expression: events
---
- "WritePending { id: \"a\" }"
- "WriteReverted { id: \"a\", error: \"on_flash rejected\" }"
