vantage-diorama/tests/snapshots/event_log_snapshot@patched_change_event.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 30
expression: events
---
- "RecordChanged { id: \"a\" }"
