vantage-diorama/tests/snapshots/event_log_snapshot@source_latency_loaded.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
expression: events
---
- "ViewportChanged { range: 500..600 }"
- "RangeLoaded { range: 500..600 }"
