vantage-diorama/tests/snapshots/event_log_snapshot@viewport_range_loaded.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 62
expression: events
---
- "ViewportChanged { range: 500..600 }"
- "RangeLoaded { range: 500..600 }"
