vantage-diorama/tests/snapshots/event_log_snapshot@write_failed.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 30
expression: events
---
- "WriteFailed { id: Some(\"b\"), error: \"on_write rejected\" }"
