vantage-diorama/tests/snapshots/event_log_snapshot@write_failed_delete.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 62
expression: events
---
- "WriteFailed { id: Some(\"a\"), error: \"on_flash rejected\" }"
