vantage-diorama/tests/snapshots/event_log_snapshot@write_failed_delete_all.snap
---
source: vantage-diorama/tests/bdd_support/steps/assertions.rs
assertion_line: 62
expression: events
---
- "WriteFailed { id: None, error: \"on_flash rejected\" }"
